Fix: allow overflow scroll for widget list and dashboard overlow list.

--- a/packages/components/src/navigation/DashboardList.scss
+++ b/packages/components/src/navigation/DashboardList.scss
@@ -4,12 +4,8 @@ $dashboard-list-color: $gray-200;
 $dashboard-list-hover-color: $foreground;
 $dashboard-list-background-hover-color: var(--dh-color-highlight-hover);
 
-$dashboard-list-owner-color: $gray-400;
-$dashboard-list-owner-hover-color: $gray-200;
-
 .dashboard-list-container {
   height: 25.6rem;
-  padding: 0 0.5rem;
   text-align: left;
   width: 23rem;
 
@@ -17,11 +13,16 @@ $dashboard-list-owner-hover-color: $gray-200;
     outline: none;
   }
 
+  .dashboard-list-header {
+    padding: $spacer-2 $spacer-2 $spacer $spacer-2;
+  }
+
   .dashboard-list {
-    margin: 0.5rem -0.5rem 0;
+    display: grid;
     padding: 0;
-    text-align: left;
+    margin: 0;
     overflow: auto;
+
     li {
       list-style: none;
       padding: 0;
@@ -49,15 +50,6 @@ $dashboard-list-owner-hover-color: $gray-200;
     }
     .dashboard-list-message {
       padding: 0 $spacer-2;
-    }
-  }
-
-  .dashboard-list-header {
-    padding-top: $spacer-2;
-    padding-bottom: $spacer-2;
-
-    .btn .fa-md {
-      margin-right: $spacer-2;
     }
   }
 }
